<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.start.StartActivity"
        android:padding="@dimen/dp_32">

        <TextView
            style="@style/AppTextViewStyle.Title"
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/source_of_income" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spinner_income"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/dp_16"
            android:background="@drawable/bg_spinner"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:spinnerMode="dropdown"
            android:prompt="@string/income" />

        <EditText
            android:id="@+id/edit_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:hint="0.00"
            android:inputType="number"/>

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spinner_range"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/dp_16"
            android:background="@drawable/bg_spinner"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:spinnerMode="dropdown"
            android:prompt="@string/time_basis" />

        <Button
            style="@style/AppButtonStyle"
            android:id="@+id/btn_set_income"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:text="@string/set_income" />

    </LinearLayout>
</layout>
