<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_4"
        android:clickable="true"
        android:focusable="true">
        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="@dimen/dp_8"
            app:cardElevation="@dimen/dp_8"
            app:cardCornerRadius="@dimen/dp_8">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_8">

                <TextView
                    android:id="@+id/txt_date"
                    style="@style/AppTextViewStyle.Date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_desc"
                    tools:text="@string/mm_dd_yyyy" />

                <TextView
                    android:id="@+id/txt_title"
                    style="@style/AppTextViewStyle.Subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/title" />

                <TextView
                    style="@style/AppTextViewStyle.Subtitle"
                    android:id="@+id/txt_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="0.0"
                    android:textColor="?colorPrimary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txt_desc"
                    style="@style/AppTextViewStyle.Date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_title"
                    tools:text="desc.." />

                <TextView
                    android:id="@+id/txt_category"
                    style="@style/AppTextViewStyle.Date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:layout_marginEnd="@dimen/dp_32"
                    android:textColor="@color/purple_200"
                    app:layout_constraintEnd_toStartOf="@+id/txt_date"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_desc"
                    tools:text="@string/add_category" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
