<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:fitsSystemWindows="true">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <ImageButton
                    android:id="@+id/btnBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:padding="@dimen/dp_16"
                    android:src="@drawable/ic_back"
                    android:tint="?colorPrimary" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="@dimen/dp_32"
                    android:layout_marginBottom="@dimen/dp_16"
                    android:src="@drawable/ic_expenses"
                    app:layout_collapseMode="parallax" />
            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scrollContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/dp_16"
            android:fillViewport="true"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginEnd="@dimen/dp_16"
                android:orientation="vertical"
                android:padding="@dimen/dp_16">

                <TextView
                    android:id="@+id/txt_current"
                    style="@style/AppTextViewStyle.Title.Semi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    tools:text="Month" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <TextView
                        android:id="@+id/textView2"
                        style="@style/AppTextViewStyle.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/expenses"
                        app:layout_constraintBottom_toTopOf="@+id/progressBar"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        style="@style/AppTextViewStyle.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/income"
                        app:layout_constraintBottom_toTopOf="@+id/progressBar"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ProgressBar
                        android:id="@+id/progressBar"
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:progressTint="?colorPrimary"
                        android:secondaryProgressTint="?colorAccent"
                        android:scaleY="5"
                        app:layout_constraintBottom_toTopOf="@+id/txt_exAmount"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                    <TextView
                        android:id="@+id/txt_exAmount"
                        style="@style/AppTextViewStyle.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="@+id/progressBar"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:text="@string/_0_00" />

                    <TextView
                        android:id="@+id/txt_inAmount"
                        style="@style/AppTextViewStyle.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        tools:text="@string/_0_00" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardViewP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_8"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="@dimen/dp_8"
                    app:cardElevation="@dimen/dp_8"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="@dimen/dp_16">

                        <ImageButton
                            android:id="@+id/btn_edit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:background="@android:color/transparent"
                            android:src="@drawable/ic_edit"
                            android:tint="?colorPrimary" />

                        <TextView
                            android:id="@+id/txt_type"
                            style="@style/AppTextViewStyle.Title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:textSize="16sp"
                            tools:text="Salary" />

                        <TextView
                            android:id="@+id/txt_amount"
                            style="@style/AppTextViewStyle.Amount.Large"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="0.0"
                            android:textAlignment="center" />

                        <TextView
                            android:id="@+id/txt_category"
                            style="@style/AppTextViewStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:textSize="16sp"
                            tools:text="Monthly" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_8"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="@dimen/dp_8"
                    app:cardElevation="@dimen/dp_8"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="@dimen/dp_16">

                        <androidx.appcompat.widget.SwitchCompat
                            android:id="@+id/switchMyDay"
                            style="@style/AppTextViewStyle.Title.Semi"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dp_16"
                            android:checked="false"
                            android:text="My Day" />

                        <TextView
                            style="@style/AppTextViewStyle.Small"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Turn on to see your Today's expenses" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>


            </LinearLayout>

        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>
